2010-05-14  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Update chromium port to send/receive cached metadata
        https://bugs.webkit.org/show_bug.cgi?id=38665

        * public/WebKitClient.h:
        (WebKit::WebKitClient::cacheMetadata):
        * public/WebURLLoaderClient.h:
        (WebKit::WebURLLoaderClient::didReceiveCachedMetadata):
        * public/WebURLResponse.h:
        * src/ChromiumBridge.cpp:
        (WebCore::ChromiumBridge::cacheMetadata):
        * src/ResourceHandle.cpp:
        (WebCore::ResourceHandleInternal::didReceiveCachedMetadata):
        (WebCore::ResourceHandle::cacheMetadata):
        * src/WebURLResponse.cpp:
        (WebKit::WebURLResponse::responseTime):
        (WebKit::WebURLResponse::setResponseTime):

2010-05-13  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] enable DRT build in chromium (for the last time)
        https://bugs.webkit.org/show_bug.cgi?id=39109

        * WebKit.gyp:

2010-05-13  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: main inspector toolbar takes noticeable time to expand.

        https://bugs.webkit.org/show_bug.cgi?id=39013

        * src/js/DevTools.js:
        (devtools.domContentLoaded):

2010-05-12  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        [Chromium] Remove transitional functions from WebStorageNamespace and WebViewClient.
        https://bugs.webkit.org/show_bug.cgi?id=38985

        These functions are no longer called as of Chromium revision 47020.
        This is part of resolving http://crbug.com/42740

        * public/WebStorageNamespace.h:
        * public/WebViewClient.h:
        (WebKit::WebViewClient::createSessionStorageNamespace):

2010-05-12  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] disable DRT in chromium again