@@ -48,6 +48,7 @@ public:
     virtual void rateChanged() = 0;
     virtual void sizeChanged() = 0;
     virtual void sawUnsupportedTracks() = 0;
+    virtual float volume() const = 0;
 
 protected:
     ~WebMediaPlayerClient() { }
