@@ -1,3 +1,15 @@
+2010-05-14  James Simonsen  <simonjam+webkit@google.com>
+
+        Reviewed by Darin Fisher.
+
+        [chromium] Expose volume through WebMediaPlayerClient
+        https://bugs.webkit.org/show_bug.cgi?id=38947
+
+        * public/WebMediaPlayerClient.h:
+        * src/WebMediaPlayerClientImpl.cpp:
+        (WebKit::WebMediaPlayerClientImpl::volume):
+        * src/WebMediaPlayerClientImpl.h:
+
 2010-05-14  Tony Gentilcore  <tonyg@chromium.org>
 
         Reviewed by Darin Fisher.
